fixing css rule not showing

--- a/MockUp/index.css
+++ b/MockUp/index.css
@@ -580,7 +580,6 @@ footer {
    /* max-width: 100%; */
    display: block;
    margin: 0;
-   vertical-align: top;
    /* margin-bottom: 10px; */
 }
 
